# afi

./: README.md  pyproject.toml
examples/: custom_main.py  dice.py
src/afi/: __init__.py  agent.py  claude.py  cli.py  config.py  json_schema.py  main.py  tool.py  ui.py  util.py
